--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "file-type": "15.0.1",
     "filesize": "6.1.0",
     "fs-extra": "9.0.1",
+    "fslightbox-vue": "2.1.3",
     "getos": "3.2.1",
     "graphql": "15.3.0",
     "graphql-list-fields": "2.0.2",
