--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "@azure/storage-blob": "12.12.0",
     "@exlinc/keycloak-passport": "1.0.2",
+    "@fancyapps/ui": "5.0.36",
     "@joplin/turndown-plugin-gfm": "1.0.45",
     "@root/csr": "0.8.1",
     "@root/keypairs": "0.10.3",
@@ -46,6 +47,7 @@
     "acme": "3.0.3",
     "akismet-api": "5.3.0",
     "algoliasearch": "4.5.1",
+    "alpinejs": "3.14.1",
     "apollo-fetch": "0.7.0",
     "apollo-server": "2.25.2",
     "apollo-server-express": "2.25.2",
